--- a/style.css
+++ b/style.css
@@ -25,22 +25,52 @@
 
 body{
     background-color: var(--Grayish-Blue);
-    display: grid;
-    place-content: center;
 }
 
 main{
-    width: 375px;
-    padding: 2rem;
-    margin-block: 5rem;
-    background-color: white;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-flow: column wrap;
 }
 
 main > header{
-    width: 100%;
-    background-color: aqua;
+    width: 300px;
+    margin: 2.3rem auto;
 }
 
-main > header h1{
-    font-size: 1.5rem;
+main > #container_cards{
+    width: 375px;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    gap: 1.8rem;
+    margin: 0 auto;
+}
+
+main > #container_cards .card{
+    width: 300px;
+    height: 230px;
+    position: relative;
+    background-color: var(--Very-Light-Gray);
+    padding: 1.8rem;
+    border-radius: 0.6rem;
+    box-shadow: 2px 2px 8px var(--Very-Dark-Blue);
+    overflow: hidden;
+}
+
+main > #container_cards .card::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: var(--cor);
+}
+
+main > #container_cards .card img{
+    position: absolute;
+    right: 10%;
+    margin-top: 20px;
 }
