--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 15px;
-    font-family: var(--font-family);
 }
 
 :root{
@@ -24,7 +23,8 @@
 }
 
 body{
-    background-color: var(--Grayish-Blue);
+    background-color: var(--Very-Light-Gray);
+    font-family: var(--font-family);
 }
 
 main{
@@ -34,9 +34,33 @@ main{
     flex-flow: column wrap;
 }
 
+main h2{
+    font-size: 1.8rem;
+    font-weight: 600px;
+}
+
+main p{
+    color: var(--Grayish-Blue);
+    line-height: 1.5rem;
+}
+
 main > header{
     width: 300px;
     margin: 2.3rem auto;
+}
+
+main > header h1{
+    font-size: 1.7rem;
+    color: var(--Grayish-Blue);
+    font-weight: 200;
+    margin-block-end: 0.8rem;
+}
+
+main > header h3{
+    color: var(--Grayish-Blue);
+    line-height: 1.5rem;
+    font-size: 1.3rem;
+    margin-block: 1.5rem;
 }
 
 main > #container_cards{
@@ -50,12 +74,12 @@ main > #container_cards{
 
 main > #container_cards .card{
     width: 300px;
-    height: 230px;
+    height: 40vh;
     position: relative;
-    background-color: var(--Very-Light-Gray);
+    background-color: white;
     padding: 1.8rem;
     border-radius: 0.6rem;
-    box-shadow: 2px 2px 8px var(--Very-Dark-Blue);
+    box-shadow: 1px 1px 8px var(--Very-Dark-Blue);
     overflow: hidden;
 }
 
