--- a/style.css
+++ b/style.css
@@ -28,10 +28,12 @@ body{
 }
 
 main{
-    width: 100%;
+    width: 70vw;
     height: 100%;
+    margin: 0 auto;
     display: flex;
     flex-flow: column wrap;
+    align-items: center;
 }
 
 main h2{
@@ -46,7 +48,8 @@ main p{
 
 main > header{
     width: 300px;
-    margin: 2.3rem auto;
+    margin-block: 2.3rem;
+    /*margin: 2.3rem auto;*/
 }
 
 main > header h1{
@@ -64,12 +67,15 @@ main > header h3{
 }
 
 main > #container_cards{
-    width: 375px;
+    width: initial;
+    height: 900px;
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: row wrap;
+    justify-content: center;
     align-items: center;
     gap: 1.8rem;
     margin: 0 auto;
+    background-color: aqua;
 }
 
 main > #container_cards .card{
@@ -97,4 +103,20 @@ main > #container_cards .card img{
     position: absolute;
     right: 10%;
     margin-top: 20px;
+}
+
+main > #container_cards #card01{
+    align-self: flex-end;
+}
+
+main > #container_cards #card02{
+    align-self: flex-start;
+}
+
+main > #container_cards #card03{
+    align-self: center;
+}
+
+main > #container_cards #card04{
+    align-self: center;
 }
