--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{
 }
 
 main{
-    width: 70vw;
+    width: 80vw;
     height: 100%;
     margin: 0 auto;
     display: flex;
@@ -68,14 +68,15 @@ main > header h3{
 
 main > #container_cards{
     width: initial;
-    height: 900px;
+    /*height: 900px;*/
+    height: auto;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
     gap: 1.8rem;
     margin: 0 auto;
-    background-color: aqua;
+    padding: 3rem;
 }
 
 main > #container_cards .card{
@@ -110,13 +111,13 @@ main > #container_cards #card01{
 }
 
 main > #container_cards #card02{
-    align-self: flex-start;
+    align-self: center;
 }
 
 main > #container_cards #card03{
-    align-self: center;
+    align-self: flex-end;
 }
 
 main > #container_cards #card04{
-    align-self: center;
+    align-self: flex-start;
 }
