--- a/style.css
+++ b/style.css
@@ -80,7 +80,8 @@ main > #container_cards{
 }
 
 main > #container_cards .card{
-    width: 300px;
+    /*width: 300px;*/
+    flex-basis: 300px;
     height: 40vh;
     position: relative;
     background-color: white;
@@ -106,18 +107,30 @@ main > #container_cards .card img{
     margin-top: 20px;
 }
 
-main > #container_cards #card01{
-    align-self: flex-end;
-}
+@media (width > 768px){
+    main{
+        width: 100vw;
+    }
 
-main > #container_cards #card02{
-    align-self: center;
-}
+    main > #container_cards{
+        width: 100%;
+        height: 100%;
+        align-self: flex-end;
+    }
 
-main > #container_cards #card03{
-    align-self: flex-end;
-}
+    main > #container_cards #card01{
+        align-self: center;
+    }
 
-main > #container_cards #card04{
-    align-self: flex-start;
+    main > #container_cards #card02{
+        align-self: flex-start;
+    }
+
+    main > #container_cards #card03{
+        align-self: center;
+    }
+
+    main > #container_cards #card04{
+        align-self: flex-end;
+    }
 }
